listings create step 5

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ GITHUB_ID=965764bd614ff7beb820
 GITHUB_SECRET=f2a73a60e46181b9d8ad73a00aa1972765cc792f
 GOOGLE_CLIENT_ID=1044581067557-ougd6pl237a3mnha5aae5ma2jghh1g15.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="duln9fsyl"
